não sei como colocar o nome

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 
 }
 
-.img-natureza {
+.imgnatureza {
     background-image: url('../assets/natureza.jpg');
     width: 98%;        
     height: 350px;
@@ -19,7 +19,7 @@
     
     }
 
-.img-praia {
+.imgpraia {
     background-image: url('../assets/praia.jpg');
     width:98%;
     height: 350px;
@@ -31,7 +31,7 @@
     justify-content: center;
 }
 
-.img-montanha {
+.imgmontanha {
     background-image: url('../assets/montanha.jpg');
     width:98%;
     height: 350px;
@@ -44,7 +44,7 @@
     
 }
 
-.img-floresta {
+.imgfloresta {
     background-image: url('../assets/floresta.jpg');
     width: 98%;
     height:350px;
@@ -56,7 +56,7 @@
     justify-content: center;
 }
 
-.texto1 {
+.texto1, .texto2, .texto3, .texto4 {
     color: black;
     border:  white;
     padding: 20px 40px;
@@ -64,12 +64,62 @@
     padding: 20px 40px;
     text-align: center;
     letter-spacing: 3px;
+    text-align: justify;
+    text-justify: inter-word;
   
     
 }
- h1{
+h1{
     color: white;
     border: 2px solid white;
     padding: 20px 40px;
     text-align: center; 
 }
+
+p::before{
+    content: "~"
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
